Created icon header, side-nav, and sidebar-support sections within sidebar.

--- a/index.html
+++ b/index.html
@@ -5,10 +5,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Admin Dashboardt</title>
+    <title>Admin Dashboard</title>
 </head>
 <body>
-    <div id="side-bar-container">
+    <div id="sidebar-container">
+        <div id="icon-header">Dashboard</div>
+
+        <div id="side-nav">
+            <a href="" class="side-nav-links">Home</a>
+            <a href="" class="side-nav-links">Profile</a>
+            <a href="" class="side-nav-links">Messages</a>
+            <a href="" class="side-nav-links">History</a>
+            <a href="" class="side-nav-links">Tasks</a>
+            <a href="" class="side-nav-links">Communities</a>
+        </div>
+
+        <div id="side-bar-support">
+            <a href="" class="side-support-links">Settings</a>
+            <a href="" class="side-support-links">Support</a>
+            <a href="" class="side-support-links">Privacy</a>
+        </div>
+
+
 
     </div>
 
